[package]
name = "rpmostree-rust"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>", "Jonathan Lebon <jonathan@jlebon.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0"
serde_yaml = "0.8"
libc = "0.2"
nix = "0.17.0"
glib-sys = "0.9.1"
gio-sys = "0.9.1"
glib = "0.9"
gio = "0.8"
tempfile = "3.0.3"
clap = "~2.33"
structopt = "0.3"
openat = "0.1.19"
openat-ext = "0.1.0"
openssl = "^0.10"
hex = "0.4.2"
bs58 = "0.3.1"
byteorder = "1"
curl = "0.4.29"
rayon = "1.0"
c_utf8 = "0.1.0"
systemd = "0.4.0"
indicatif = "0.15.0"
lazy_static = "1.1.0"
envsubst = "0.2.0"
serde_plain = "0.3.0"
chrono = { version = "0.4.11", features = ["serde"] }
# Can't bump to 2020_1 or beyond due to https://github.com/ostreedev/ostree/pull/2137
ostree = { version = "0.7.0", features = ["v2019_6"] }
libdnf-sys = { path = "libdnf-sys", version = "0.1.0" }

[patch.crates-io]
ostree = { git = "https://gitlab.com/cgwalters/ostree-rs", branch = "walters-master" }
#ostree = { path = "/var/srv/walters/src/gitlab/fkrull/ostree-rs" }


[lib]
name = "rpmostree_rust"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
# Unwinding across FFI boundaries is undefined behavior, and anyways, we're
# [crash-only](https://en.wikipedia.org/wiki/Crash-only_software)
panic = "abort"
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true
# For true release builds, we do suggest you enable LTO via e.g.
# env RUSTFLAGS='-C lto=true' as part of the outer build.  It's just
# off by default because it's quite slow and the default is more oriented
# towards local development.
